Modified network structure to handle better Disconnection and other request in general.